--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -64,7 +64,7 @@
         onEncounterDateChange();
         //Show number of clients already booked on tca date
         jq('#showNumberBooked').hide();
-        getField("returnVisitDate.value").change(getPatientsBookedOnDate);
+        jq("#returnVisitDate input[type=hidden]").change(getPatientsBookedOnDate);
 
         //On delivery outcome change
         jq('#single').show();
@@ -520,7 +520,7 @@
     }
     // get count of patients booked on a date
     function getPatientsBookedOnDate() {
-        var tca_date = getValue('returnVisitDate.value');
+        var tca_date = jq('#returnVisitDate input[type=hidden]').val();
         jq('#showNumberBooked').hide();
         jq.getJSON('/' + ctxPath + '/kenyaemr/emrUtils/clientsBookedForMchConsultationOnDate.action', { appointmentDate: tca_date }, function(data) {
             jq('#showBookedResult').text(data.bookingsOnDate);
