Added Sub_county registration number and date in the IPT initiation form and IPT register. Mapped in the IPT register template

--- a/omod/src/main/webapp/resources/htmlforms/ipt/iptInitiation.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipt/iptInitiation.html
@@ -50,6 +50,30 @@
 		</fieldset>
 	</div>
 
+	<div class="ke-form-content">
+		<fieldset>
+			<legend>Sub-County registration</legend>
+
+			<table>
+				<tr>
+					<td>Registration Number:</td>
+					<td><patient field="identifier" identifierTypeId="d8ee3b8c-a8fc-4d6b-af6a-9423be5f8906" required="false"/></td>
+
+					<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Registration Date:&#160;&#160;&#160;
+						<obs class="reg-date" conceptId="161552AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" showTime="false" required="false" allowFutureDates="false"
+						/>
+					</td>
+
+
+
+				</tr>
+				<tr>
+					<td colspan="2"><div id="startOfTreatmentDateError" class="error"></div></td>
+				</tr>
+			</table>
+		</fieldset>
+	</div>
+
 	<enrollInProgram programId="335517a1-04bc-438b-9843-1ba49fb7fcd9" />
 
 	<div class="ke-form-footer">
