Added Health care worker for IPT indication in Initiation form. Refactored code for TB status after IPT and IPT drug collection dates.

--- a/omod/src/main/webapp/resources/htmlforms/ipt/iptInitiation.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipt/iptInitiation.html
@@ -43,7 +43,8 @@
 				<tr>
 					<td>Indication for IPT</td>
 					<td>
-						<obs conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="138571AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162277AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162278AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown"  labelText=""/>
+						<obs conceptId="162276AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="138571AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162277AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162278AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+							  style="dropdown" answerLabels="HIV Positive,In Prison,Child exposed to Tuberculosis,Health Care Worker"/>
 					</td>
 				</tr>
 			</table>
