--- a/omod/src/main/webapp/resources/htmlforms/ipt/iptInitiation.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipt/iptInitiation.html
@@ -29,7 +29,7 @@
 						});
 					</script>
 				</ifMode>
-				<td>Date Started on IPT: <encounterDate id="encounter-date" /></td>
+				<td>Date Started on IPT: <encounterDate id="encounter-date" showTime="true" /></td>
 				<td>Location: <encounterLocation default="GlobalProperty:kenyaemr.defaultLocation" type="autocomplete" /></td>
 		  </tr>
 		</table>
