--- a/omod/src/main/webapp/resources/htmlforms/otz/otzEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/otz/otzEnrollment.html
@@ -33,6 +33,7 @@
 				jq('#yes-label').hide();
 				jq('#yes-field').hide();
 				jq('#previous-module').hide();
+				jq('#date-initially-enrolled :input').val('');
 			}
 
 		}
@@ -89,7 +90,7 @@
 						/>
 					</td>
 					<td id="yes-label">If Yes,date initially enrolled to OTZ</td>
-					<td id="yes-field"><obs conceptId="160534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="transfer-in-date" allowFutureDates="false"/></td>
+					<td id="yes-field"><obs conceptId="160534AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="date-initially-enrolled" allowFutureDates="false"/></td>
 				</tr>
 			</table>
 
