otz and ovc form enhancements

--- a/omod/src/main/webapp/resources/htmlforms/otz/otzActivityForm.html
+++ b/omod/src/main/webapp/resources/htmlforms/otz/otzActivityForm.html
@@ -112,8 +112,8 @@
 			<legend> OTZ Modules</legend>
 			<table class="simple-table" id="assessment-questions">
 				<tr>
-					<td> <b>OTZ Modules completed(Recent)</b> </td>
-					<td> <b>OTZ Modules completed(Today)</b> </td>
+					<td> <b>Previously completed(Recent)</b> </td>
+					<td> <b>Completed(Today)</b> </td>
 				</tr>
 				<tr>
 					<td id="modules-previously-covered">
