--- a/omod/src/main/webapp/resources/htmlforms/otz/otzEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/otz/otzEnrollment.html
@@ -14,11 +14,19 @@
 <htmlform>
 	
 	<script type="text/javascript">
+		var transfer = "<lookup expression="fn.latestObs(160563).getValueCoded()"/>"
+
 
 		jQuery(function($){
 			jq('#previous-module').hide();
 			jq('#yes-label').hide();
 			jq('#yes-field').hide();
+			if(transfer ==1065 &amp;&amp; jq('#transfer-in-status input[value=1065]:checked').length > 0) {
+				jq('#yes-label').show();
+				jq('#yes-field').show();
+				jq('#previous-module').show();
+			}
+
 			jq('#transfer-in-status :input[type=radio]').click(isTransferIn);
 
 		});
@@ -34,6 +42,14 @@
 				jq('#yes-field').hide();
 				jq('#previous-module').hide();
 				jq('#date-initially-enrolled :input').val('');
+				jq('#orientation input[type=radio]').attr('checked',false);
+				jq('#participation input[type=radio]').attr('checked',false);
+				jq('#leadership input[type=radio]').attr('checked',false);
+				jq('#future-decision input[type=radio]').attr('checked',false);
+				jq('#transition-adult-care input[type=radio]').attr('checked',false);
+				jq('#treatment-literacy input[type=radio]').attr('checked',false);
+				jq('#srh input[type=radio]').attr('checked',false);
+				jq('#beyond-third-90 input[type=radio]').attr('checked',false);
 			}
 
 		}
@@ -107,12 +123,17 @@
 
 					<table class="simple-table">
 						<tr>
+							<th align="left"></th>
+							<th align="left"></th>
+							<th align="left">Date Completed</th>
+						</tr>
+						<tr>
 							<td>OTZ Orientation</td>
 							<td>
 								<obs
 										id="orientation" conceptId="165359" style="radio"
 										answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										answerLabels="Yes"/>
+										answerLabels="Yes" dateLabel="&lt;/td&gt;&lt;td&gt;" />
 							</td>
 						</tr>
 						<tr>
@@ -121,7 +142,7 @@
 								<obs
 										id="participation" conceptId="165360" style="radio"
 										answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										answerLabels="Yes"/>
+										answerLabels="Yes" dateLabel="&lt;/td&gt;&lt;td&gt;" />
 							</td>
 						</tr>
 						<tr>
@@ -130,7 +151,7 @@
 								<obs
 										id="leadership" conceptId="165361" style="radio"
 										answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										answerLabels="Yes"/>
+										answerLabels="Yes" dateLabel="&lt;/td&gt;&lt;td&gt;"/>
 							</td>
 						</tr>
 						<tr>
@@ -139,7 +160,7 @@
 								<obs
 										id="future-decision" conceptId="165362" style="radio"
 										answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										answerLabels="Yes"/>
+										answerLabels="Yes" dateLabel="&lt;/td&gt;&lt;td&gt;"/>
 							</td>
 						</tr>
 						<tr>
@@ -148,7 +169,7 @@
 								<obs
 										id="transition-adult-care" conceptId="165363" style="radio"
 										answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										answerLabels="Yes"/>
+										answerLabels="Yes" dateLabel="&lt;/td&gt;&lt;td&gt;"/>
 							</td>
 						</tr>
 						<tr>
@@ -157,7 +178,7 @@
 								<obs
 										id="treatment-literacy" conceptId="165364" style="radio"
 										answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										answerLabels="Yes"/>
+										answerLabels="Yes" dateLabel="&lt;/td&gt;&lt;td&gt;"/>
 							</td>
 						</tr>
 						<tr>
@@ -166,7 +187,7 @@
 								<obs
 										id="srh" conceptId="165365" style="radio"
 										answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										answerLabels="Yes"/>
+										answerLabels="Yes" dateLabel="&lt;/td&gt;&lt;td&gt;"/>
 							</td>
 						</tr>
 						<tr>
@@ -175,7 +196,7 @@
 								<obs
 										id="beyond-third-90" conceptId="165366" style="radio"
 										answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-										answerLabels="Yes"/>
+										answerLabels="Yes" dateLabel="&lt;/td&gt;&lt;td&gt;"/>
 							</td>
 						</tr>
 
