Add remarks section on activity form

--- a/omod/src/main/webapp/resources/htmlforms/otz/otzActivityForm.html
+++ b/omod/src/main/webapp/resources/htmlforms/otz/otzActivityForm.html
@@ -253,6 +253,22 @@
 		</fieldset>
 	</div>
 
+
+	<div class="ke-form-content">
+		<fieldset>
+			<legend>Remarks</legend>
+			<table class="simple-table">
+				<tr>
+					<td>Remarks:</td>
+					<td>
+						<obs conceptId="161011AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="3" style="textarea" />
+					</td>
+
+				</tr>
+			</table>
+		</fieldset>
+	</div>
+
 	<div class="ke-form-footer">
 		<submit />
 	</div>
