Fix user cannot Stop client on ART

--- a/omod/src/main/webapp/resources/htmlforms/ovc/ovcDiscontinuation.html
+++ b/omod/src/main/webapp/resources/htmlforms/ovc/ovcDiscontinuation.html
@@ -87,7 +87,7 @@
 					<td><obs conceptId="161555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="discontinuation-reason"
 							 answerConceptIds="160036AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,165219
                                               ,1267AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-							 answerLabels="Transfer out to a PEPFAR suported facility,Transfer out to a non PEPFAR suported facility,
+							 answerLabels="Transfer out to a PEPFAR supported facility,Transfer out to a non PEPFAR supported facility,
 											Exit without graduation, Graduated out of OVC"
 							 style="dropdown" labelText=""  required="true" /></td>
 
